# ncd

./: .gitignore  .rustc_info.json  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/workflows/: release.yml
oldtests/: ncd_h1.rs  ncd_h2.rs  ncd_h3.rs
src/: main.rs  unit_tests.rs  unit_tests_local.rs
tests/: ncd.rs  ncd_local.rs
